--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,33 @@
-h1 {
-    color:blueviolet;
+/*Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+
+:root {
+    --logo-font:'Space Mono', mono space;
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+
+body {
+    font-family: var(--logo-font);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header, footer {
+    display: flex;
+    align-items: center;
+    color: white;
+    background-color: black;
+    width: 100%;
+    height: 65px;
+}
+
+main {
+    flex-grow: 1;
+    background-image: url(https://img.nbc.com/sites/nbcunbc/files/images/2016/1/19/MDot-TheOffice-640x360-MP.jpg);
+   background-repeat: round;
 }
