--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,10 @@
 
 :root {
     --logo-font:'Space Mono', mono space;
+    --shadow-color: #18c0f4;
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
 }
@@ -23,11 +24,45 @@ header, footer {
     color: white;
     background-color: black;
     width: 100%;
-    height: 65px;
+    height: 100px;
+    justify-content: center;
+}
+
+header > h1 {
+    text-shadow: 5px 5px 3px var(--shadow-color);
 }
 
 main {
     flex-grow: 1;
     background-image: url(https://img.nbc.com/sites/nbcunbc/files/images/2016/1/19/MDot-TheOffice-640x360-MP.jpg);
-   background-repeat: round;
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
 }
+
+.card {
+    width: 300px;
+    height: 150px;
+    border-radius: 12px;
+    margin: 10px;
+    box-shadow: 1px 1px 12px 5px black;
+}
+
+.card:hover {
+    box-shadow: 1px 1px 15px 5px white;
+}
+
+#collection {
+    flex-wrap: wrap;
+}
+.outline {
+    border: 1px solid black;
+}
+
+.flex-ctr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
