--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 /*Google Fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Tangerine:wght@700&display=swap');
 
 :root {
-    --logo-font:'Space Mono', mono space;
-    --shadow-color: #18c0f4;
+    --logo-font: 'Cinzel', serif;
+    --secondary-font: 'Tangerine', cursive;
+    --shadow-color: #9d8556;
 }
 
 * {
@@ -30,14 +31,21 @@ header, footer {
 
 header > h1 {
     text-shadow: 5px 5px 3px var(--shadow-color);
+    font-family: 'Tangerine', cursive;
+    font-size: 60px;
+}
+
+footer {
+    color: var(--shadow-color);
 }
 
 main {
     flex-grow: 1;
-    background-image: url(https://img.nbc.com/sites/nbcunbc/files/images/2016/1/19/MDot-TheOffice-640x360-MP.jpg);
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: center;
+    background-image: url(https://static.wikia.nocookie.net/lotr/images/8/8b/DOiAi2WUEAE3A1Y.0.jpg/revision/latest?cb=20200305221819);
+    background-color: var(--shadow-color);
+    background-size: cover;
+    background-position : center;
+    background-repeat: no-repeat;
 }
 
 .card {
@@ -47,15 +55,18 @@ main {
     margin: 10px;
     box-shadow: 1px 1px 12px 5px black;
     font-size: 25px;
+    color: #daa638;
+    text-align: center;
 }
 
 .card:hover {
     box-shadow: 1px 1px 15px white;
 }
 
-#collection {
+#container {
     flex-wrap: wrap;
 }
+
 .outline {
     border: 1px solid black;
 }
@@ -65,5 +76,7 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+
 
 
